// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsSection SettingsSection.FieldWrapper renders correctly with label 1`] = `
<div>
  <label
    class="nxrm-settings-section-field-wrapper"
  >
    <label
      class="nxrm-settings-section-field-wrapper-label"
    >
      test-label
    </label>
    <input
      type="text"
    />
  </label>
</div>
`;

exports[`SettingsSection SettingsSection.FieldWrapper renders correctly without label 1`] = `
<div>
  <div
    class="nxrm-settings-section-field-wrapper"
  >
    <input
      type="text"
    />
  </div>
</div>
`;

exports[`SettingsSection SettingsSection.Footer renders correctly 1`] = `
<div>
  <div
    class="nxrm-settings-section-footer"
  >
    <button>
      test
    </button>
  </div>
</div>
`;

exports[`SettingsSection renders correctly 1`] = `
<div>
  <div
    class="nxrm-settings-section"
  >
    <span>
      test
    </span>
  </div>
</div>
`;

exports[`SettingsSection renders correctly while isLoading 1`] = `
<div>
  <span
    class="nxrm-settings-section-loading-mask"
    style="height: 0px; width: 0px;"
  >
    Loading...
  </span>
  <div
    class="nxrm-settings-section"
  >
    <span>
      test
    </span>
  </div>
</div>
`;
